<resources>
    <string name="app_name">Wakawala</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="facebook_app_id">203860377204399</string>
    <string name="fb_login_protocol_scheme">fb203860377204399</string>
    <string name="facebook_application_id">@string/facebook_app_id         </string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="agree_terms">By creating an account, you agree to our terms of use, privacy policy and cookie policy.</string>
    <string name="dont_have_an_account_signup">Don\'t have an account yet? Sign Up</string>
    <string name="skip">Skip</string>

    <string name="file_provider_authority" translatable="false">com.wakawala.fileprovider</string>

    <string name="popular">Popular</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="select_a_category">Select a Category</string>
    <string name="campaign_id">Campaign ID</string>
    <string name="campaign_name">Campaign Name</string>
    <string name="username_tab">Username</string>

    <string name="featured">Featured</string>
    <string name="filter">Filter</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_your_account_type">Select your account type</string>
    <string name="individual">Individual</string>
    <string name="s_organization">Organization</string>
    <string name="favorite">Favourite</string>
    <string name="donate">Donate</string>

    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining
        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
        versions of Lorem Ipsum</string>
    <string name="comments">Comments</string>
    <string name="message"><b>Muhmmad : </b> hbjhsbdbjjsjjhbj sdjgvjsdjhcgvjhgd jhsgdjhgjhsgsd khsdjhbjh sdjhvgjh</string>
    <string name="msg">&lt;b&gt;User&lt;/b&gt;:Hello i Am Here</string>
    <string name="msg_with_bold"><![CDATA[<b>User</b>: Hello I am here]]></string>

    <string name="upload_your_ncampaign_photo">Upload your \ncampaign photo</string>
    <string name="maximum_5_photos">(maximum 5 photos)</string>
    <string name="upload_video_from_youtube">Upload Video from Youtube</string>
    <string name="enter_your_youtube_video_url_optional">Enter your youtube video URL (optional)</string>
    <string name="category">Category</string>
    <string name="select_your_campaign_category">Select your campaign category</string>
    <string name="campaign_title">Campaign Title</string>
    <string name="enter_campaign_title">Enter campaign title</string>
    <string name="_23_december">23 December</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="search_history">Search History</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_select_currency">SelectCurrencyActivity</string>
    <string name="title_activity_select_place">SelectPlaceActivity</string>

    <string name="str_please_enter_email_address">Please Enter Email Address</string>
    <string name="str_please_enter_valid_email_address">Please Enter Valid Email Address</string>
    <string name="str_please_enter_password">Please Enter Password</string>
    <string name="str_please_enter_username">Please Enter Username</string>
    <string name="str_please_select_account_type">Please Select Account Type</string>

    //////------------- crop image -------------------////////////
    <string name="crop_image_activity_title">Crop</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>

    <string name="pick_image_intent_chooser_title">Select source</string>

    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>

</resources>
