<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.actvities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDarkBlue">

        <include
            android:id="@+id/included_toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingStart="@dimen/_32sdp"
            android:paddingEnd="@dimen/_32sdp">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_wakawala_with_text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_email"
                style="@style/EditTextInLogin"
                android:layout_marginTop="@dimen/_28sdp"
                android:drawableStart="@drawable/ic_mail_icon"
                android:hint="@string/username"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_pwd"
                style="@style/EditTextInLogin"
                android:drawableStart="@drawable/ic_lock_icon"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_14sp" />

            <Button
                android:id="@+id/btn_login"
                style="@style/LoginOptionBtn"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/bg_green"
                android:text="@string/login" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/dont_have_an_account_signup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_14sp" />

        </LinearLayout>
    </RelativeLayout>
</layout>