<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.actvities.LoginOptionActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_60sdp"
                android:src="@drawable/img_wakawala_with_text" />

            <Button
                android:id="@+id/btn_login"
                style="@style/LoginOptionBtn"
                android:layout_below="@id/img_logo"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/bg_green"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_fb_login"
                style="@style/LoginOptionBtn"
                android:layout_below="@id/btn_login"
                android:visibility="visible"
                android:background="@drawable/bg_blue"
                android:drawableStart="@drawable/img_fb_login"
                android:paddingEnd="@dimen/_40sdp"
                android:text="@string/login_with_facebook" />

            <Button
                android:id="@+id/btn_google_login"
                style="@style/LoginOptionBtn"
                android:layout_below="@id/btn_fb_login"
                android:background="@drawable/bg_white"
                android:drawableStart="@drawable/img_google_login"
                android:paddingEnd="@dimen/_40sdp"
                android:text="@string/login_with_google"
                android:visibility="visible"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_google_login"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/agree_terms"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_agree"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/dont_have_an_account_signup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_14sp" />

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/tv_signup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_transparent_green_stroke"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textsize_16sp" />
        </RelativeLayout>
    </FrameLayout>
</layout>