<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.AddCampaignFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <LinearLayout
                    android:id="@+id/llUploadPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/light_grey"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_30sdp">

                        <ImageView
                            android:id="@+id/ivFileUpload"
                            android:layout_width="100dp"
                            android:layout_height="@dimen/_70sdp"
                            android:layout_centerHorizontal="true"
                            android:paddingTop="@dimen/_5sdp"
                            android:src="@drawable/file_upload" />

                        <ImageView
                            android:id="@+id/ivAddPlus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/ivFileUpload"
                            android:src="@drawable/ic_add_campaign_green" />
                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/upload_your_ncampaign_photo"
                        android:textColor="#7E7E7E"
                        android:textSize="@dimen/textsize_14sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/maximum_5_photos"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/textsize_12sp" />

                </LinearLayout>

                <ss.com.bannerslider.Slider
                    android:id="@+id/sliderBanner"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:visibility="gone"
                    app:slider_animateIndicators="true"
                    app:slider_emptyView="@layout/layout_empty_view"
                    app:slider_indicatorSize="10dp"
                    app:slider_selectedSlideIndicator="@drawable/indicator_circle_selected"
                    app:slider_unselectedSlideIndicator="@drawable/indicator_circle_unselected" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CreateCampaignTV"
                    android:text="@string/upload_video_from_youtube" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/youtubeUrl"
                    style="@style/CreateCampaignET"
                    android:hint="@string/enter_your_youtube_video_url_optional" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CreateCampaignTV"
                    android:text="@string/category" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/category"
                    style="@style/CreateCampaignTV"
                    android:hint="@string/select_your_campaign_category" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CreateCampaignTV"
                    android:text="@string/campaign_title" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/title"
                    style="@style/CreateCampaignET"
                    android:hint="@string/enter_campaign_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:backgroundTint="@color/light_grey"
                    android:text="Enter your campaign description"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Campaign Duration"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/startDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Start Date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/endDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="End Date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="normal" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/startDateText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Select Date"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/endDateText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Select Date"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="normal" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@color/light_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Campaign Location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="Select Country"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/_18sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/light_grey" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="Select City"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/_18sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/light_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Campaign Goal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_light_grey_rectangle"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="@dimen/_10sdp"
                        android:text="MYR"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/goal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="Enter Goal"
                        android:inputType="numberDecimal"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColorHint="@color/dark_grey" />
                </LinearLayout>

                <Button
                    android:id="@+id/add"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_dark_blue_rectangle"
                    android:gravity="center_horizontal|center_vertical"
                    android:inputType="textCapSentences"
                    android:text="Create Campaign"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="By Clicking of create campaign, you accept the terms and conditions."
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>